Feature/create unit test for service layer (#36)
* unit testing
* refactoring

Co-authored-by: SemenAntufiev <alexantufiev@gmail.com>
Co-authored-by: Aleksey Afanasyev <afanasiev2.aa@edu.spbstu.ru>
Co-authored-by: hoi-bj <d.besedin.0@ya.ru>